--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
     <header class="cabecalho">
-        
+        <h1>vai ser uma imagem aqui</h1>
+        <ul class="lista-cabecalho">
+        <li class="item-lista-cabecalho">Wilson Joffre</li>
+        <li class="item-lista-cabecalho">Estudante-Nicolly</li>
+        </ul>
     </header>
 </body>
 </html>
