--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img src="logo.png" alt="logo do colegio wilson joffre">
+        <img class= "imagem-cabecalho" src="logo.png" alt="logo do colegio wilson joffre">
         <ul class="lista-cabecalho">
         <li class="item-lista-cabecalho">Wilson Joffre</li>
         <li class="item-lista-cabecalho">Estudante-Nicolly</li>
