--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
         <li class="item-lista-cabecalho">Estudante-Nicolly</li>
         </ul>
     </header>
+    <section class="escola">
+        <div class="escola-div-conteudo"></div>
+    </section>
 </body>
 </html>
