--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo"></div>
+        <h2></h2>
+    </div>
     </section>
 </body>
 </html>
