--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </ul>
     </header>
     <section class="escola">
-        <div class="escola-div-conteudo"></div>
+        <div class="escola-div-conteudo">
         <h2></h2>
     </div>
     </section>
