--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-        <h2></h2>
+        <h2 class="escola-titulo">Sobre a escola</h2>
+        <p class="escola-texto-um">O colégio estadual Wilson Joffre foi fundado em 1959, pelo médico que trabalhava pelo desenvolvimento do município e fica na região central de Cascavel. </p>
     </div>
     </section>
 </body>
