--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p class="escola-texto-um">O colégio estadual Wilson Joffre foi fundado em 1959, pelo médico que trabalhava pelo desenvolvimento do município e fica na região central de Cascavel. </p>
         <p class="escola-texto-dois">No início eram apenas duas salas de aula, hoje são 19, mas no total a mais de 30 ambientes. Com o passar dos anos essas ampliações foram necessárias. A estrutura hoje atende aproximadamente 1,4 mil alunos e a maioria começa no sexto ano e segue até o ensino médio. Os estudantes criam um vínculo com a unidade e acompanham todas essas mudanças. Quem também cria uma relação de muito carinho pela instituição, são os colaboradores. </p>
     </div>
-    <img src="escola.png" alt="menino sentado em frente ao quadro">
+    <img class= "escola-imagem" src="escola.png" alt="menino sentado em frente ao quadro">
     </section>
 </body>
 </html>
