--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
     </div>
     <img class= "escola-imagem" src="escola.png" alt="menino sentado em frente ao quadro">
     </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são os nossos estudantes</h2>
+    </section>
 </body>
 </html>
