--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
+        <div class="estudante-div">
+            <img class="estudante-imagem" src= ""=
+        </div>
     </section>
 </body>
+
 </html>
