--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
         <div class="estudante-div">
-            <img class="estudante-imagem" src= ""=
+        <img class="estudante-imagem" src="nicolly.png" alt="">
+        <h3 class="estudante-nome">Nicolly</h3>
         </div>
     </section>
 </body>
-
 </html>
