--- a/index.html
+++ b/index.html
@@ -28,6 +28,13 @@
         <img class="estudante-imagem" src="nicolly.png" alt="">
         
         </div>
+        <div class="estudante-div">
+        <img class="estudante-imagem" src="anna.kailer.png" alt="">
+
+        </div>
+        <div class="estudante-imagem" src="davi.png" alt="">
+            
+        </div>
     </section>
 </body>
 </html>
