--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         <img class="estudante-imagem" src="anna.kailer.png" alt="">
 
         </div>
-        <div class="estudante-imagem" src="davi.png" alt="">
+        <div class="estudante-div">
+            <img class="estudante-imagem" src="mari zakseski.png"
 
         </div>
-        
+        <div
     </section>
 </body>
 </html>
