--- a/index.html
+++ b/index.html
@@ -33,10 +33,13 @@
 
         </div>
         <div class="estudante-div">
-            <img class="estudante-imagem" src="mari zakseski.png"
+        <img class="estudante-imagem" src="mari.png"
 
         </div>
-        <div
+        <div class="estudante-div">
+        <img class="estudante-imagem" src=""
+
+        </div>
     </section>
 </body>
 </html>
