--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         </div>
         <div class="estudante-div">
-        <img class="estudante-imagem" src=""
+        <img class="estudante-imagem" src="julia.png"
 
         </div>
     </section>
