--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
         </div>
         <div class="estudante-div">
-        <img class="estudante-imagem" src="mari.png"
+        <img class="estudante-imagem" src="mari.png" alt="">
 
         </div>
         <div class="estudante-div">
-        <img class="estudante-imagem" src="julia.png"
+        <img class="estudante-imagem" src="julia.png" alt="">
 
         </div>
     </section>
