--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         </div>
         <div class="estudante-div">
-        <img class="estudante-imagem" src="anna.kailer.png" alt="">
+        <img class="estudante-imagem" src="jo" alt="">
 
         </div>
         <div class="estudante-div">
