--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         
         </div>
         <div class="estudante-div">
-        <img class="estudante-imagem" src="jojo" alt="">
+        <img class="estudante-imagem" src="JOJO.png" alt="">
 
         </div>
         <div class="estudante-div">
