--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         </div>
         <div class="estudante-div">
-        <img class="estudante-imagem" src="mari.png" alt="">
+        <img class="estudante-imagem" src="mari.png" alt"">
 
         </div>
         <div class="estudante-div">
