--- a/index.html
+++ b/index.html
@@ -26,15 +26,24 @@
         <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
         <div class="estudante-div">
         <img class="estudante-imagem" src="nicolly.png" alt="">
+        <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
+        <img class="estudante-icone" src="instagram.png" alt="instagram">
+        <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
         
         </div>
         <div class="estudante-div">
         <img class="estudante-imagem" src="JOJO.png" alt="">
+        <img class="estudante-icone" src="icons8-twitter-50.png">
+        <img class="estudante-icone" src="instagram.png">
+        <img class="estudante-icone" src="icons8-tik-tok-48.png">
 
         </div>
         <div class="estudante-div">
         <img class="estudante-imagem" src="mari.png" alt"">
-
+        <img class="estudante-icone" src="icons8-twitter-50.png">
+        <img class="estudante-icone" src="instagram.png">
+        <img class="estudante-icone" src="icons8-tik-tok-48.png"
+        
         </div>
         <div class="estudante-div">
         <img class="estudante-imagem" src="julia.png" alt="">
