--- a/index.html
+++ b/index.html
@@ -33,20 +33,25 @@
         </div>
         <div class="estudante-div">
         <img class="estudante-imagem" src="JOJO.png" alt="">
-        <img class="estudante-icone" src="icons8-twitter-50.png">
-        <img class="estudante-icone" src="instagram.png">
-        <img class="estudante-icone" src="icons8-tik-tok-48.png">
+        <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
+        <img class="estudante-icone" src="instagram.png" alt="instagram">
+        <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
 
         </div>
         <div class="estudante-div">
-        <img class="estudante-imagem" src="mari.png" alt"">
-        <img class="estudante-icone" src="icons8-twitter-50.png">
-        <img class="estudante-icone" src="instagram.png">
-        <img class="estudante-icone" src="icons8-tik-tok-48.png"
+        <img class="estudante-imagem" src="mari.png" alt="twitter">
+        <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
+        <img class="estudante-icone" src="instagram.png" alt="instagram">
+        <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
         
         </div>
         <div class="estudante-div">
         <img class="estudante-imagem" src="julia.png" alt="">
+        <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
+        <img class="estudante-icone" src="instagram.png" alt="instagram">
+        <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
+
+        
 
         </div>
     </section>
