--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
         <img class="estudante-icone" src="instagram.png" alt="instagram">
         <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
 
-        
+        </div>
+        <div class="estudante-div">
+        <img class="estudante-imagem" src="ana.png"
+        </div>
 
         </div>
     </section>
