--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         </div>
         <div class="estudante-div">
-        <img class="estudante-imagem" src="mari.png" alt="twitter">
+        <img class="estudante-imagem" src="mari.png" alt="">
         <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
         <img class="estudante-icone" src="instagram.png" alt="instagram">
         <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
@@ -53,7 +53,16 @@
 
         </div>
         <div class="estudante-div">
-        <img class="estudante-imagem" src="ana.png"
+        <img class="estudante-imagem" src="ana.png" alt="">
+        <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
+        <img class="estudante-icone" src="instagram.png" alt="instagram">
+        <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
+
+        </div>
+        <div class="estudante-div">
+        <img class="estudante-imagem" src=""
+
+
         </div>
 
         </div>
