--- a/index.html
+++ b/index.html
@@ -60,10 +60,20 @@
 
         </div>
         <div class="estudante-div">
-        <img class="estudante-imagem" src=""
+        <img class="estudante-imagem" src="Eloah.png" alt="">
+        <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="twitter">
+        <img class="estudante-icone" src="instagram.png" alt="instagram">
+        <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
 
+    </div>
+    <div class="estudante-div">
+    <img class="estudante-imagem" src="f" alt="">
+    <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="twitter">
+    <img class="estudante-icone" src="instagram.png" alt="instagram">
+    <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
 
-        </div>
+        
+
 
         </div>
     </section>
