--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <h2 class="estudante-titulo">Quem são os nossos estudantes?</h2>
         <div class="estudante-div">
             <img class="estudante-imagem" src="nicolly.png" alt="">
+            <h3 class="esudante-nome">nicolly</h3>
             <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
             <img class="estudante-icone" src="instagram.png" alt="instagram">
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
@@ -39,6 +40,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="JOJO.png" alt="">
+            <h3 class="esudante-nome">josué</h3>
             <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
             <img class="estudante-icone" src="instagram.png" alt="instagram">
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
@@ -46,6 +48,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="mari.png" alt="">
+            <h3 class="esudante-nome">mariana</h3>
             <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
             <img class="estudante-icone" src="instagram.png" alt="instagram">
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
@@ -53,6 +56,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="julia.png" alt="">
+            <h3 class="esudante-nome">julia</h3>
             <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
             <img class="estudante-icone" src="instagram.png" alt="instagram">
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
@@ -60,6 +64,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="ana.png" alt="">
+            <h3 class="esudante-nome">ana</h3>
             <img class="estudante-icone" src="icons8-twitter-50.png" alt="twitter">
             <img class="estudante-icone" src="instagram.png" alt="instagram">
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
@@ -67,6 +72,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Eloah.png" alt="">
+            <h3 class="esudante-nome">eloah</h3>
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="twitter">
             <img class="estudante-icone" src="instagram.png" alt="instagram">
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
@@ -74,6 +80,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="flavia.png" alt="">
+            <h3 class="esudante-nome">flavia</h3>
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="twitter">
             <img class="estudante-icone" src="instagram.png" alt="instagram">
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
@@ -81,6 +88,7 @@
         </div>
         <div class="estudante-div">
             <img class="estudante-imagem" src="Castor.png" alt="">
+            <h3 class="esudante-nome">mateus</h3>
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="twitter">
             <img class="estudante-icone" src="instagram.png" alt="instagram">
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
