--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </ul>
     </header>
     <section class="escola">
+        <div class="estudante-todos">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">Sobre a escola</h2>
             <p class="escola-texto-um">O colégio estadual Wilson Joffre foi fundado em 1959, pelo médico que trabalhava
@@ -93,11 +94,8 @@
             <img class="estudante-icone" src="instagram.png" alt="instagram">
             <img class="estudante-icone" src="icons8-tik-tok-48.png" alt="tiktok">
 
-
-
-
-
-        </div>
+</div>
+</div>
     </section>
 </body>
 
